fix: completely remove inner right padding in dropdowns
affects: @entur/dropdown

truncating behaviour is to strict, thus needing to remove said padding

--- a/packages/dropdown/src/BaseDropdown.scss
+++ b/packages/dropdown/src/BaseDropdown.scss
@@ -3,7 +3,7 @@
 .eds-dropdown-wrapper {
   position: relative;
   .eds-form-control {
-    padding-right: $space-extra-small2;
+    padding-right: 0;
   }
   .eds-form-control__append {
     display: flex;
